trunk/Archive2/ad/b6864dde572770/output
main.cpp:16:20: error: no matching function for call to 'make_net'
    Net<2> a_net = make_net();
                   ^~~~~~~~
main.cpp:11:9: note: candidate template ignored: couldn't infer template argument 'IN'
Net<IN> make_net() {
        ^
1 error generated.
